Prevent divider from wrapping

--- a/source/css/common.css.scss
+++ b/source/css/common.css.scss
@@ -448,7 +448,7 @@ iframe {
       display  : block;
       top      : 9px;
       left     : 0;
-      width    : 23%;
+      width    : 4em;
       z-index  : 8;
       
       
